--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.23.3",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
+    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
